; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_main-conf.c_SET_min_packet.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_main-conf.c_SET_min_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Masscan = type { i32, i64, i64 }

@.str = private unnamed_addr constant [17 x i8] c"min-packet = %u\0A\00", align 1
@CONF_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.Masscan*, i8*, i8*)* @SET_min_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @SET_min_packet(%struct.Masscan* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.Masscan*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store %struct.Masscan* %0, %struct.Masscan** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = call i32 @UNUSEDPARM(i8* %8)
  %10 = load %struct.Masscan*, %struct.Masscan** %5, align 8
  %11 = getelementptr inbounds %struct.Masscan, %struct.Masscan* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %33

14:                                               ; preds = %3
  %15 = load %struct.Masscan*, %struct.Masscan** %5, align 8
  %16 = getelementptr inbounds %struct.Masscan, %struct.Masscan* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = icmp ne i32 %17, 60
  br i1 %18, label %24, label %19

19:                                               ; preds = %14
  %20 = load %struct.Masscan*, %struct.Masscan** %5, align 8
  %21 = getelementptr inbounds %struct.Masscan, %struct.Masscan* %20, i32 0, i32 2
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %32

24:                                               ; preds = %19, %14
  %25 = load %struct.Masscan*, %struct.Masscan** %5, align 8
  %26 = getelementptr inbounds %struct.Masscan, %struct.Masscan* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = load %struct.Masscan*, %struct.Masscan** %5, align 8
  %29 = getelementptr inbounds %struct.Masscan, %struct.Masscan* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = call i32 @fprintf(i64 %27, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %30)
  br label %32

32:                                               ; preds = %24, %19
  store i32 0, i32* %4, align 4
  br label %40

33:                                               ; preds = %3
  %34 = load i8*, i8** %7, align 8
  %35 = call i64 @parseInt(i8* %34)
  %36 = trunc i64 %35 to i32
  %37 = load %struct.Masscan*, %struct.Masscan** %5, align 8
  %38 = getelementptr inbounds %struct.Masscan, %struct.Masscan* %37, i32 0, i32 0
  store i32 %36, i32* %38, align 8
  %39 = load i32, i32* @CONF_OK, align 4
  store i32 %39, i32* %4, align 4
  br label %40

40:                                               ; preds = %33, %32
  %41 = load i32, i32* %4, align 4
  ret i32 %41
}

declare dso_local i32 @UNUSEDPARM(i8*) #1

declare dso_local i32 @fprintf(i64, i8*, i32) #1

declare dso_local i64 @parseInt(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
